@@ -11,7 +11,7 @@
 \authoraddress{E-mail: \email{djc@object-craft.com.au}}
 
 \release{0.38pre1}
-\date{December 8, 2006}
+\date{janvier 29, 2007}
 
 \makeindex			% tell \index to actually write the .idx file
 \makemodindex			% If this contains a lot of module sections.
